<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.Detect.DetectImgGalleryActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="115dp"
        android:layout_height="74dp"
        android:src="@drawable/logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detect"
        android:textSize="24sp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/baloo_chettan_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorOnBackground"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/desc_back"
        android:onClick="onBackClick"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/fp_dominant_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dominant_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/baloo_chettan_2"
        app:layout_constraintTop_toBottomOf="@+id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardSpecificPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/fp_dominant_color"
        app:layout_constraintBottom_toTopOf="@+id/colorName_Hex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/fp_pointer"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:translationZ="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/pointer"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/fp_cursor"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fp_pointer"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/pointer"
            android:translationZ="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/set_position"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/specificPhotoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_img"
            android:background="?android:attr/colorBackground"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/colorName_Hex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/gray"
        app:cardElevation="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/detectBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/fp_color"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/fp_colorName"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/baloo_chettan_2"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fp_colorHex"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/baloo_chettan_2"
                android:foreground="?attr/selectableItemBackground"
                android:paddingHorizontal="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/detectBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/detect_img"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="@font/timmana"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/delete_img"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="@font/timmana"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
