<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="115dp"
            android:layout_height="74dp"
            android:src="@drawable/logo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textSize="24sp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/baloo_chettan_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/desc_back"
            android:onClick="onBackClick"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            />

    <androidx.cardview.widget.CardView
            android:id="@+id/cardCameraPreview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/backIcon"
            app:layout_constraintBottom_toTopOf="@+id/cardBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/cameraPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/blue_light"
        app:layout_constraintTop_toBottomOf="@+id/cardCameraPreview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/switchCamera"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/baseline_cameraswitch_24"
                android:contentDescription="@string/desc_back"
                android:onClick="onBackClick" />

            <ImageView
                android:id="@+id/takePhotoBtn"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/baseline_camera_24"
                android:contentDescription="@string/desc_back" />

            <ImageView
                android:id="@+id/galleryBtn"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/baseline_image_24"
                android:contentDescription="@string/desc_back" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>
